[package]
name = "psl"
version = "0.1.2"
edition = "2021"

[features]
sqlite-create-many = ["builtin-psl-connectors/sqlite-create-many"]

[dependencies]
builtin-psl-connectors = { path = "./builtin-connectors" }
psl-core = { path = "./psl-core" }

serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.25", features = ["rt-multi-thread", "macros", "sync", "io-std", "io-util", "parking_lot", "time"] }
user-facing-errors = { path = "./libs/user-facing-errors" }
uuid = { version = "1", features = ["serde"] }
indoc = "2.0.1"

[dev-dependencies]
base64 = "0.13.0"
dissimilar = "1.0.4"
expect-test = "1.1.0"
either = "1.8.1"
