[package]
edition = "2021"
name = "psl-core"
version = "0.1.0"

[dependencies]
diagnostics = { path = "../diagnostics" }
parser-database = { path = "../parser-database" }
prisma-value = { path = "../prisma-value" }
schema-ast = { path = "../schema-ast" }

bigdecimal = "0.3"
chrono = { version = "0.4.6", default_features = false }
itertools = "0.10"
once_cell = "1.3.1"
regex = "1.3.7"
enumflags2 = "0.7"

# For the connector API.
lsp-types = "0.91.1"
url = "2.2.1"
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
indoc = "2.0.1"